--- a/stories/styles/css/scroll-story.css
+++ b/stories/styles/css/scroll-story.css
@@ -1,85 +1,237 @@
+button {
+  appearance: none;
+  background-color: #F0F0DF;
+  border: 0;
+  border-radius: 3px;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-family: "itc-officina-sans-pro", sans-serif;
+  font-size: 1.25em;
+  -webkit-font-smoothing: antialiased;
+  font-weight: 600;
+  line-height: 1;
+  padding: 0.8em 1.6em;
+  text-decoration: none;
+  transition: background-color 150ms ease;
+  user-select: none;
+  vertical-align: middle;
+  white-space: nowrap;
+}
+button:hover, button:focus {
+  background-color: shade(#F0F0DF, 20%);
+  color: #fff;
+}
+button:disabled {
+  cursor: not-allowed;
+  opacity: 0.5;
+}
+button:disabled:hover {
+  background-color: #F0F0DF;
+}
+
+a:link {
+  color: #F0F0DF;
+}
+
+a:visited {
+  color: shade(#F0F0DF, 20%);
+}
+
+a:hover {
+  color: #331900;
+  text-decoration: underline;
+}
+
+ul,
+ol {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+dl {
+  margin-bottom: 0.8em;
+}
+dl dt {
+  font-weight: 600;
+  margin-top: 0.8em;
+}
+dl dd {
+  margin: 0;
+}
+
+table {
+  border-collapse: collapse;
+  margin: 0.8em 0;
+  table-layout: fixed;
+  width: 100%;
+}
+
+th {
+  border-bottom: 1px solid shade(#F0F0DF, 25%);
+  font-weight: 600;
+  padding: 0.8em 0;
+  text-align: left;
+}
+
+td {
+  border-bottom: 1px solid #F0F0DF;
+  padding: 0.8em 0;
+}
+
+tr,
+td,
+th {
+  vertical-align: middle;
+}
+
+html {
+  background-color: #353526;
+}
+
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
+body {
+  color: #F0F0DF;
+  font-family: "itc-officina-sans-pro", sans-serif;
+  font-size: 1.25em;
+  line-height: 1.6;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "itc-officina-sans-pro", sans-serif;
+  line-height: 1.2;
+  margin: 0;
+}
+
+p {
+  margin: 0 0 0.8em;
+}
+
+a {
+  color: #F0F0DF;
+  text-decoration: none;
+  transition: color 150ms ease;
+}
+a:active, a:focus, a:hover {
+  color: shade(#F0F0DF, 25%);
+}
+
+hr {
+  border-bottom: 1px solid #F0F0DF;
+  border-left: 0;
+  border-right: 0;
+  border-top: 0;
+  margin: 1.6em 0;
+}
+
+img {
+  margin: 0;
+  max-width: 100%;
+}
+
+blockquote {
+  font-style: italic;
+}
+
+h1 {
+  font-size: 3em;
+  margin-bottom: .3em;
+  text-align: center;
+}
 
 h3 {
-	text-align: center;
-	margin: 0 0 0 0;
-} /*added by Don*/
-h1 {
-	font-size: 3em;
-	text-align: center;
-	margin: 0 0 .3em 0;
-} /*added by Don*/
+  text-align: center;
+}
+
+body {
+  margin: 0;
+}
 
 #mapdiv {
-    width:100%;
-    height:100%;
-} /*added by Don*/
+  width: 100%;
+  height: 100%;
+}
 
 .leaflet-control-attribution {
-	text-align: right;	
-} /* attempt to move that leaflet attribution from upper right corner */
+  text-align: right;
+}
 
 .leaflet-control {
-	text-align: right;	
-} /* attempt to move that leaflet attribution from upper right corner */
+  text-align: right;
+}
 
 .narrative {
-	margin: 0 auto;
-	width: 60%;
+  margin: 0 auto;
+  width: 60%;
 }
 
 .narrative p, ol li {
-	font-size: 1.5em;
+  font-size: 1.5em;
 }
 
 .narrative div p, div.full-image p {
-	color: gray;
-	font-size: 1em;
-	margin: .5em 0 2em 0;
+  color: gray;
+  font-size: 1em;
+  margin: .5em 0 2em 0;
 }
 
 .narrative div img {
-	width: 90%;
+  width: 90%;
 }
 
-.image-panel	{
-	border: 1px solid blue;		
-	height: 80vh;
-	position: relative;
+.image-panel {
+  border: 1px solid blue;
+  height: 80vh;
+  position: relative;
 }
 
-.image-panel div 	{
-	position: absolute;
-	top: 0;
-	left: 0;
-	/*margin-left: 1em;*/
-	}
-
-.chapter-title 	{
-	background-color: #ccc;
-	height: 3em;
-	margin-top: 4em;
-	text-align: center;
-	}
-
-.image-panel div img, div.full-image img	{
-	max-width: 100%;
+.image-panel div {
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
-.caption-panel	{
-	width: 25%;
-	position: relative;
-	z-index: 10;
-	margin: 2em;
+.chapter-title {
+  background-color: #B25900;
+  padding: .75em;
+  text-align: center;
+}
+
+.image-panel div img, div.full-image img {
+  max-width: 100%;
+}
+
+.caption-panel {
+  width: 25%;
+  position: relative;
+  z-index: 10;
+  margin: 2em;
 }
 
 .caption-panel div {
-	background-color: beige;
-	/*margin-bottom: 50em;*/
-	margin-bottom: 90vh;
-	padding: 2em;
-	margin-top: -10em;
+  background-color: #353526;
+  border: thin solid #F0F0DF;
+  opacity: 0.5;
+  margin-bottom: 90vh;
+  padding: 2em;
+  margin-top: -10em;
+}
+.caption-panel div p {
+  color: #F0F0DF;
+  opacity: 1.0;
 }
 
 .caption-panel div.last-one {
-	margin-bottom: 20em;
+  margin-bottom: 20em;
 }
+
+/*# sourceMappingURL=scroll-story.css.map */
