--- a/stories/styles/css/scroll-story.css
+++ b/stories/styles/css/scroll-story.css
@@ -1,6 +1,6 @@
 button {
   appearance: none;
-  background-color: #F0F0DF;
+  background-color: #e4e0c7;
   border: 0;
   border-radius: 3px;
   color: #fff;
@@ -19,7 +19,7 @@ button {
   white-space: nowrap;
 }
 button:hover, button:focus {
-  background-color: shade(#F0F0DF, 20%);
+  background-color: shade(#e4e0c7, 20%);
   color: #fff;
 }
 button:disabled {
@@ -27,19 +27,19 @@ button:disabled {
   opacity: 0.5;
 }
 button:disabled:hover {
-  background-color: #F0F0DF;
+  background-color: #e4e0c7;
 }
 
 a:link {
-  color: #F0F0DF;
+  color: #e4e0c7;
 }
 
 a:visited {
-  color: shade(#F0F0DF, 20%);
+  color: shade(#e4e0c7, 20%);
 }
 
 a:hover {
-  color: #331900;
+  color: #ff7f00;
   text-decoration: underline;
 }
 
@@ -69,14 +69,14 @@ table {
 }
 
 th {
-  border-bottom: 1px solid shade(#F0F0DF, 25%);
+  border-bottom: 1px solid shade(#e4e0c7, 25%);
   font-weight: 600;
   padding: 0.8em 0;
   text-align: left;
 }
 
 td {
-  border-bottom: 1px solid #F0F0DF;
+  border-bottom: 1px solid #e4e0c7;
   padding: 0.8em 0;
 }
 
@@ -95,9 +95,10 @@ html {
 }
 
 body {
-  color: #F0F0DF;
+  color: #e4e0c7;
   font-family: "itc-officina-sans-pro", sans-serif;
   font-size: 1.25em;
+  font-weight: 400;
   line-height: 1.6;
 }
 
@@ -108,6 +109,7 @@ h4,
 h5,
 h6 {
   font-family: "itc-officina-sans-pro", sans-serif;
+  font-weight: 400;
   line-height: 1.2;
   margin: 0;
 }
@@ -117,16 +119,16 @@ p {
 }
 
 a {
-  color: #F0F0DF;
+  color: #e4e0c7;
   text-decoration: none;
   transition: color 150ms ease;
 }
 a:active, a:focus, a:hover {
-  color: shade(#F0F0DF, 25%);
+  color: shade(#e4e0c7, 25%);
 }
 
 hr {
-  border-bottom: 1px solid #F0F0DF;
+  border-bottom: 1px solid #e4e0c7;
   border-left: 0;
   border-right: 0;
   border-top: 0;
@@ -148,8 +150,24 @@ h1 {
   text-align: center;
 }
 
+.story-title h1 {
+  margin: 0;
+}
+
 h3 {
   text-align: center;
+}
+h3.grid-title {
+  color: #B25900;
+  letter-spacing: .075em;
+  text-shadow: 2px 2px black;
+  text-transform: uppercase;
+}
+
+.chapter-title h2 {
+  letter-spacing: .075em;
+  text-shadow: 2px 2px black;
+  text-transform: uppercase;
 }
 
 body {
@@ -169,19 +187,38 @@ body {
   text-align: right;
 }
 
+header.story-title {
+  background-color: rgba(53, 54, 38, 0.75);
+  position: relative;
+  z-index: 10;
+}
+
+.top-image {
+  margin-top: -5em;
+  position: relative;
+  z-index: 1;
+}
+
 .narrative {
-  margin: 0 auto;
-  width: 60%;
+  margin: 1em auto 3em auto;
+  max-width: 60%;
 }
 
 .narrative p, ol li {
-  font-size: 1.5em;
+  font-size: 1.25em;
 }
 
 .narrative div p, div.full-image p {
-  color: gray;
-  font-size: 1em;
+  color: #e4e0c7;
+  font-size: 0.75em;
   margin: .5em 0 2em 0;
+}
+
+div.full-image p {
+  width: 15%;
+  float: left;
+  padding: 1.6em;
+  border: 1px solid #e4e0c7;
 }
 
 .narrative div img {
@@ -208,6 +245,7 @@ body {
 
 .image-panel div img, div.full-image img {
   max-width: 100%;
+  margin-bottom: 1.6em;
 }
 
 .caption-panel {
@@ -219,19 +257,37 @@ body {
 
 .caption-panel div {
   background-color: #353526;
-  border: thin solid #F0F0DF;
-  opacity: 0.5;
+  border: thin solid #e4e0c7;
+  opacity: 0.75;
   margin-bottom: 90vh;
   padding: 2em;
   margin-top: -10em;
 }
 .caption-panel div p {
-  color: #F0F0DF;
-  opacity: 1.0;
+  color: #e4e0c7;
 }
 
 .caption-panel div.last-one {
   margin-bottom: 20em;
+}
+
+nav.main-menu {
+  text-align: center;
+}
+nav.main-menu li {
+  border-right: thin solid #e4e0c7;
+  display: inline;
+  font-size: 0.75em;
+  font-weight: 400;
+  letter-spacing: .15em;
+  padding: 0 2em;
+  text-transform: uppercase;
+}
+nav.main-menu li.last-menu-item {
+  border-right: none;
+}
+nav.main-menu li.selected a {
+  color: #B25900;
 }
 
 /*# sourceMappingURL=scroll-story.css.map */
