--- a/stories/styles/scss/layout/_page-layout.scss
+++ b/stories/styles/scss/layout/_page-layout.scss
@@ -1,9 +1,7 @@
-// page layout
+// story page layout
 body {
 	margin: 0;
 }
-
-
 
 // added by Don
 #mapdiv {
@@ -21,19 +19,38 @@ body {
 	text-align: right;	
 } 
 
+header.story-title {
+	background-color: rgba(53, 54, 38, 0.75);
+	position: relative;
+	z-index: 10;
+}
+
+.top-image {
+	margin-top: -5em;
+	position: relative;
+	z-index: 1;
+}
+
 .narrative {
-	margin: 0 auto;
-	width: 60%;
+	margin: 1em auto 3em auto;
+	max-width: 60%;
 }
 
 .narrative p, ol li {
-	font-size: 1.5em;
+	font-size: $base-font-size;
 }
 
 .narrative div p, div.full-image p {
-	color: gray;
-	font-size: 1em;
+	color: $beige;
+	font-size: $small-font-size;
 	margin: .5em 0 2em 0;
+}
+
+div.full-image p {
+	width: 15%;
+	float: left;
+	padding: $base-spacing;
+	border: $base-border;
 }
 
 .narrative div img {
@@ -60,6 +77,7 @@ body {
 
 .image-panel div img, div.full-image img	{
 	max-width: 100%;
+	margin-bottom: $base-spacing;
 }
 
 .caption-panel	{
@@ -72,14 +90,13 @@ body {
 .caption-panel div {
 	background-color: $dark-gray;
 	border: thin solid $beige;
-	opacity: 0.5;
+	opacity: 0.75;
 	margin-bottom: 90vh;
 	padding: 2em;
 	margin-top: -10em;
 
 	p {
 		color: $beige;
-		opacity: 1.0;
 	}
 }
 
