--- a/stories/styles/css/scroll-story.css
+++ b/stories/styles/css/scroll-story.css
@@ -215,10 +215,11 @@ header.story-title {
 }
 
 div.full-image p {
-  width: 15%;
-  float: left;
-  padding: 1.6em;
   border: 1px solid #e4e0c7;
+  float: left;
+  margin-left: 1.6em;
+  padding: 1.6em;
+  width: 15%;
 }
 
 .narrative div img {
@@ -241,6 +242,7 @@ div.full-image p {
   background-color: #B25900;
   padding: .75em;
   text-align: center;
+  z-index: 9;
 }
 
 .image-panel div img, div.full-image img {
