added map content, removed empty paragraphs and last-one styles, began styles for quotes

--- a/stories/styles/scss/layout/_page-layout.scss
+++ b/stories/styles/scss/layout/_page-layout.scss
@@ -101,7 +101,7 @@ div.full-image p {
 		color: $beige;
 	}
 }
-
+//do we still need this? if so, put the class back in the markup
 .caption-panel div.last-one {
 	margin-bottom: 20em;
 }
