--- a/stories/styles/scss/layout/_page-layout.scss
+++ b/stories/styles/scss/layout/_page-layout.scss
@@ -132,6 +132,11 @@ div.full-image {
 	}
 }
 
+a.caption-link  {
+	color: $accent-color;
+	text-decoration: underline;
+}
+
 // Video
 #video-content {
 	position: relative;
