--- a/styles/scss/base/_typography.scss
+++ b/styles/scss/base/_typography.scss
@@ -17,13 +17,18 @@ h5,
 h6 {
   font-family: $heading-font-family;
   font-size: $base-font-size;
-  font-weight: bold;
+  font-weight: normal;
   line-height: $heading-line-height;
   margin: 0 0 $small-spacing 0;
 }
 
 h1 {
   font-size: $large-font-size;
+  font-weight: bold;
+  margin-bottom: 0;
+}
+
+h5 {
   margin-bottom: 0;
 }
 
