--- a/styles/scss/components/_svg-graphics.scss
+++ b/styles/scss/components/_svg-graphics.scss
@@ -1,4 +1,5 @@
-// styles for svg graphic - not working
-#rects a image {
-	border: $base-border;
+// styles for svg graphic
+.thumb-label-text {
+  font-family: "FontinSans-Regular";
+  font-size:12px;
 }
