--- a/stories/styles/scss/base/_variables.scss
+++ b/stories/styles/scss/base/_variables.scss
@@ -19,6 +19,8 @@ $largest-font-size: 2.25em;
 $weight-book: 400;
 $weight-medium: 500;
 $weight-bold: 700;
+// for dots
+$dot-size: 0.5em;
 
 // Line height
 $base-line-height: 1.6;
