--- a/stories/styles/css/scroll-story.css
+++ b/stories/styles/css/scroll-story.css
@@ -268,6 +268,7 @@ div.full-image p {
 .chapter-title {
   background-color: #B25900;
   padding: .75em;
+  position: relative;
   text-align: center;
   z-index: 9;
 }
@@ -366,6 +367,70 @@ nav.main-menu li.last-menu-item {
 }
 nav.main-menu li.selected a {
   color: #B25900;
+}
+
+.dots ul {
+  cursor: default;
+  display: inline-block;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  right: 1em;
+  top: 40%;
+}
+
+.dots li {
+  position: relative;
+  display: block;
+  float: left;
+  margin: 0 0.5em;
+  width: 0.5em;
+  height: 0.5em;
+  cursor: pointer;
+}
+
+.dots li a {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  outline: none;
+  border-radius: 50%;
+  background-color: #e4e0c7;
+  text-indent: -999em;
+  cursor: pointer;
+  /* make the text accessible to screen readers */
+  position: absolute;
+}
+
+/* Fill up */
+.dots-fillup li a {
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0);
+  box-shadow: inset 0 0 0 2px white;
+  transition: background 0.3s;
+}
+
+.dots-fillup li a::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  height: 0;
+  left: 0;
+  width: 100%;
+  background-color: #fff;
+  box-shadow: 0 0 1px #fff;
+  transition: height 0.3s;
+}
+
+.dots-fillup li a:hover,
+.dots-fillup li a:focus {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.dots-fillup li.current a::after {
+  height: 100%;
 }
 
 /*# sourceMappingURL=scroll-story.css.map */
