--- a/stories/styles/scss/layout/_page-layout.scss
+++ b/stories/styles/scss/layout/_page-layout.scss
@@ -81,6 +81,7 @@ div.full-image {
 .chapter-title 	{
 	background-color: $accent-color;
 	padding: .75em;
+	position: relative;
 	text-align: center;
 	z-index: 9;
 }
