--- a/stories/styles/scss/components/_navigation.scss
+++ b/stories/styles/scss/components/_navigation.scss
@@ -34,13 +34,13 @@ nav.main-menu {
 }
 
 .dots li {
-	position: relative;
+	cursor: pointer;
 	display: block;
 	float: left;
-	margin: 0 $dot-size;
-	width: $dot-size;
 	height: $dot-size;
-	cursor: pointer;
+	margin: 0 $dot-size;
+	position: relative;
+	width: $dot-size;
 }
 
 .dots li a {
@@ -50,9 +50,7 @@ nav.main-menu {
 	height: 100%;
 	outline: none;
 	border-radius: 50%;
-	//background-color: #fff;
-	//background-color: rgba(255,255,255,0.3);
-	background-color: $base-font-color;
+	background-color: rgba(255,255,255,0.3);
 	text-indent: -999em;
 	cursor: pointer; /* make the text accessible to screen readers */
 	position: absolute;
@@ -61,8 +59,10 @@ nav.main-menu {
 /* Fill up */
 .dots-fillup li a {
 	overflow: hidden;
-	background-color: rgba(0,0,0,0);
-	box-shadow: inset 0 0 0 2px rgba(255,255,255,1);
+	//this is the fill color:
+	//background-color: $base-font-color;
+	//this is the circle
+	box-shadow: inset 0 0 0 2px darken($base-font-color, 25%);
 	transition: background 0.3s;
 }
 
@@ -73,14 +73,15 @@ nav.main-menu {
 	height: 0;
 	left: 0;
 	width: 100%;
-	background-color: #fff;
+	//this is the fill color for the selected dot;
+	background-color: darken($base-font-color, 25%);
 	box-shadow: 0 0 1px #fff;
 	transition: height 0.3s;
 }
 
 .dots-fillup li a:hover,
 .dots-fillup li a:focus {
-	background-color: rgba(0,0,0,0.2);
+	background-color: $base-font-color;
 }
 
 .dots-fillup li.current a::after {
