--- a/stories/styles/scss/components/_navigation.scss
+++ b/stories/styles/scss/components/_navigation.scss
@@ -21,6 +21,17 @@ nav.main-menu {
 	}
 
 }
+
+// chapter drop down menu
+header.story-title {
+
+nav#fred {
+		position: absolute;
+		top: 1em;
+		left: 1em;
+	}
+}
+
 // dot chapter navigation
 .dots ul {
 	cursor: default;
