--- a/stories/styles/scss/base/_typography.scss
+++ b/stories/styles/scss/base/_typography.scss
@@ -86,10 +86,6 @@ h3 {
   text-transform: uppercase;  
 }
 
-.narrative p.poo {
-  position: relative;
-}
-
 .narrative p, ol li {
   font-size: $base-font-size;
 }
@@ -98,27 +94,28 @@ h3 {
   color: $accent-color;
 }
 
-// Sidebars
-.narrative p.poo .sidebar {
+.sidebar-parent {
+  width: 100vw;
+  overflow: visible;
+  position: absolute;
+  left: 0;
+}
 
-  a {
-   background-color: #558000;
-   border-radius: 2px 2px 0 0;
-   color: $base-font-color;
-   font-size: $small-font-size;
-   padding: $tiny-spacing;
+// Sidebars
+.sidebar {
+  background-color: #558000;
+  border-radius: 0 0 3px 3px;
   // Abs positioning makes it not take up vert space */
   position: absolute;
-  bottom: 0;
-  right: -60%;
+  bottom: 2em;
+  //right: 0;
   // Rotate from top left corner (not default) */
   transform-origin: 0 0;
   transform: rotate(-90deg);
+
+  a {    
+    color: $base-font-color;
+    font-size: $smallish-font-size;
+    padding: $base-spacing;
   }
 }
-
-
-
-//.rotate {
-//  transform: rotate(-90deg);
-//}
