--- a/styles/css/UR-project-site-styles.css
+++ b/styles/css/UR-project-site-styles.css
@@ -197,12 +197,12 @@ nav {
   font-size: 12px;
 }
 
-.menu-page {
+.menu-page, .video-page {
   margin-left: auto;
   margin-right: auto;
   max-width: 1000px;
 }
-.menu-page p {
+.menu-page p, .video-page p {
   font-size: 0.8em;
 }
 
