--- a/stories/styles/css/scroll-story.css
+++ b/stories/styles/css/scroll-story.css
@@ -374,10 +374,11 @@ a.caption-link {
   font-family: "itc-officina-sans-pro", sans-serif;
   font-size: 1.25em;
   font-weight: 500;
+  line-height: 1.2;
   padding: 0;
 }
 
-.leaflet-tooltip-left:before {
+.leaflet-tooltip-left:before, .leaflet-tooltip-right:before {
   display: none;
 }
 
